[package]
name = "donut-live"
version = "0.1.0"
edition = "2024"

[features]
default = []
logger = ["chrono"]

[dependencies]
artem = "3.0.0"
bincode = "1.3.3"
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
], optional = true }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
gif = "0.13.1"
httparse = "1.10.1"
image = "0.25.6"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.27"
onebuck = { version = "0.1.5", default-features = false, features = [
    "atomic",
    "clone",
] }
parking_lot = "0.12.4"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
thiserror = "2.0.12"
zstd = "0.13.3"

[profile.release]
lto = true
codegen-units = 1
