[package]
name = "donut-live"
version = "0.1.0"
edition = "2024"

[features]
default = []
logger = ["chrono"]

[dependencies]
artem = "3.0.0"
bincode = "1.3.3"
chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
], optional = true }
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
gif = "0.13.3"
httparse = "1.10.1"
image = "0.25.8"
indicatif = { version = "0.18.0", features = ["rayon"] }
log = "0.4.28"
onebuck = { version = "0.1.6", default-features = false, features = [
    "atomic",
    "clone",
] }
parking_lot = "0.12.4"
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_bytes = "0.11.19"
thiserror = "2.0.16"
zstd = "0.13.3"

[profile.release]
lto = true
codegen-units = 1
